# fsdb

./: Cargo.toml  EXAMPLE.md  README.md
src/: lib.rs  main.rs
src/db/: store.rs
tests/: lib.rs
