[package]
name = "fsdb"
version = "0.1.0"
authors = ["Lowell <lowell.mower@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
proc-macro2 = "0.4.27"
syn = { version = "0.15.31", features = ["full"] }
quote = "0.6.0"